--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-@media (max-width: 700px) {}
-
 html {
   scroll-behavior: smooth;
 }
@@ -38,9 +36,10 @@ body {
 }
 
 #welcome-section {
-  height: 50vw;
+  height: 100vh;
   width: 100%;
-  background-color: #0C120C;
+  /*background-color: #0C120C;*/
+  background: linear-gradient(#e66465, #0C120C);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -138,29 +137,29 @@ h1 {
 
 #contact {
   width: 100%;
-  height: 50vw;
+  height: 100vh;
   background: linear-gradient(#e66465, #9198e5);
   position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   flex-direction: column;
   z-index: -1;
 }
 
-#logos {
-  position: fixed;
+.logos {
   display: flex;
-  justify-content: center;
   flex-direction: row;
-  flex-wrap: wrap;
+  justify-content: space-around;
+  flex-wrap: wrap; 
+  width: 70%;
 }
 
 #contact a {
   font-size: 30px;
   color: #ECEBF3;
-  width: 400px;
-  margin: 50px;
+  margin: 10px;
 }
 
 #contact a:hover {
@@ -178,8 +177,24 @@ h1 {
   width: 100%;
   height: 1px;
   background-color: transparent;
-  z-index: 3;
-  position: absolute;
-  top: 190vw;
+  z-index: 1;
+  position: relative;
+  top: 100vh;
   left: 0;
+}
+
+@media (max-width: 950px) {
+  #welcome-section {
+    background: linear-gradient(#e66465, #0C120C);
+    flex-direction: column-reverse;
+  }
+
+  #text h2 {
+    font-size: 35px;
+    margin: -30px 0 50px 0;
+  }
+
+  #welcome-section img {
+      margin: 0;
+  }
 }
