--- a/styles.css
+++ b/styles.css
@@ -175,12 +175,16 @@ h1 {
 
 #footer {
   width: 100%;
-  height: 1px;
-  background-color: transparent;
+  height: 40px;
+  background-color: #ECEBF3;
+  color: #4C86A8;
   z-index: 1;
   position: relative;
   top: 100vh;
   left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @media (max-width: 950px) {
